--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "try-rollup",
   "version": "1.0.0",
   "devDependencies": {
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-json": "^2.0.2"
   }
 }
