--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
-  "name": "try-rollup",
-  "version": "1.0.0",
-  "devDependencies": {
-    "babel-preset-es2015-rollup": "^1.2.0",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-json": "^2.0.2"
-  }
+	"name": "try-rollup",
+	"version": "1.0.0",
+	"devDependencies": {
+		"babel-preset-es2015-rollup": "^1.2.0",
+		"rollup-plugin-babel": "^2.6.1",
+		"rollup-plugin-json": "^2.0.2"
+	},
+	"main": "bundle.js",
+	"jsnext:main": "bundle.js",
+	"dependencies": {
+		"rollup": "^0.35.13"
+	},
+	"scripts": {
+		"build": "rollup -c",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/rongjihuang/try-rollup.git"
+	},
+	"author": "dragon",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/rongjihuang/try-rollup/issues"
+	},
+	"homepage": "https://github.com/rongjihuang/try-rollup#readme"
 }
