--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-	"name": "try-rollup",
-	"version": "1.0.0",
-	"devDependencies": {
-		"babel-preset-es2015-rollup": "^1.2.0",
-		"rollup-plugin-babel": "^2.6.1",
-		"rollup-plugin-json": "^2.0.2"
-	},
-	"main": "bundle.js",
-	"jsnext:main": "bundle.js",
-	"dependencies": {
-		"rollup": "^0.35.13"
-	},
-	"scripts": {
-		"build": "rollup -c",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/rongjihuang/try-rollup.git"
-	},
-	"author": "dragon",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/rongjihuang/try-rollup/issues"
-	},
-	"homepage": "https://github.com/rongjihuang/try-rollup#readme"
+  "name": "try-rollup",
+  "version": "1.0.0",
+  "main": "dist/bundle.cjs.js",
+  "module": "dist/bundle.esm.js",
+  "browser": "dist/bundle.umd.js",
+  "dependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "rollup": "^1.15.6",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.0.3"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "test": "node test/test.js",
+    "pretest": "npm run build"
+  },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rongjihuang/try-rollup.git"
+  },
+  "author": "dragon",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rongjihuang/try-rollup/issues"
+  },
+  "homepage": "https://github.com/rongjihuang/try-rollup#readme"
 }
